--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -14,6 +14,30 @@
                     <key>Path</key>
                     <string>SSDT-OLARILA-MOBILE.aml</string>
                 </dict>
+                <dict>
+                    <key>Comment</key>
+                    <string></string>
+                    <key>Enabled</key>
+                    <true/>
+                    <key>Path</key>
+                    <string>ssdt-rmne.aml</string>
+                </dict>
+                <dict>
+                    <key>Comment</key>
+                    <string></string>
+                    <key>Enabled</key>
+                    <true/>
+                    <key>Path</key>
+                    <string>SSDT-PNLF.aml</string>
+                </dict>
+                <dict>
+                    <key>Comment</key>
+                    <string></string>
+                    <key>Enabled</key>
+                    <true/>
+                    <key>Path</key>
+                    <string>SSDT-EC-USBX-LAPTOP.aml</string>
+                </dict>
             </array>
             <key>Delete</key>
             <array>
@@ -118,6 +142,11 @@
         <dict>
             <key>Add</key>
             <dict>
+                <key>PciRoot(0x0)/Pci(0x1C,0x6)/Pci(0x0,0x0)</key>
+                <dict>
+                    <key>built-in</key>
+                    <data>AQ==</data>
+                </dict>
                 <key>PciRoot(0x0)/Pci(0x2,0x0)</key>
                 <dict>
                     <key>AAPL,ig-platform-id</key>
@@ -391,6 +420,96 @@
                     <key>PlistPath</key>
                     <string>Contents/Info.plist</string>
                 </dict>
+                <dict>
+                    <key>Arch</key>
+                    <string>Any</string>
+                    <key>BundlePath</key>
+                    <string>RtWlanU.kext</string>
+                    <key>Comment</key>
+                    <string>V1830.32.b27</string>
+                    <key>Enabled</key>
+                    <true/>
+                    <key>ExecutablePath</key>
+                    <string>Contents/MacOS/RtWlanU</string>
+                    <key>MaxKernel</key>
+                    <string></string>
+                    <key>MinKernel</key>
+                    <string></string>
+                    <key>PlistPath</key>
+                    <string>Contents/Info.plist</string>
+                </dict>
+                <dict>
+                    <key>Arch</key>
+                    <string>Any</string>
+                    <key>BundlePath</key>
+                    <string>RtWlanU1827.kext</string>
+                    <key>Comment</key>
+                    <string>V1827.4.b36</string>
+                    <key>Enabled</key>
+                    <true/>
+                    <key>ExecutablePath</key>
+                    <string>Contents/MacOS/RtWlanU1827</string>
+                    <key>MaxKernel</key>
+                    <string></string>
+                    <key>MinKernel</key>
+                    <string></string>
+                    <key>PlistPath</key>
+                    <string>Contents/Info.plist</string>
+                </dict>
+                <dict>
+                    <key>Arch</key>
+                    <string>Any</string>
+                    <key>BundlePath</key>
+                    <string>NullEthernet.kext</string>
+                    <key>Comment</key>
+                    <string>V1.0.6</string>
+                    <key>Enabled</key>
+                    <true/>
+                    <key>ExecutablePath</key>
+                    <string>Contents/MacOS/NullEthernet</string>
+                    <key>MaxKernel</key>
+                    <string></string>
+                    <key>MinKernel</key>
+                    <string></string>
+                    <key>PlistPath</key>
+                    <string>Contents/Info.plist</string>
+                </dict>
+                <dict>
+                    <key>Arch</key>
+                    <string>Any</string>
+                    <key>BundlePath</key>
+                    <string>USBInjectAll.kext</string>
+                    <key>Comment</key>
+                    <string>V0.7.6</string>
+                    <key>Enabled</key>
+                    <true/>
+                    <key>ExecutablePath</key>
+                    <string>Contents/MacOS/USBInjectAll</string>
+                    <key>MaxKernel</key>
+                    <string></string>
+                    <key>MinKernel</key>
+                    <string></string>
+                    <key>PlistPath</key>
+                    <string>Contents/Info.plist</string>
+                </dict>
+                <dict>
+                    <key>Arch</key>
+                    <string>Any</string>
+                    <key>BundlePath</key>
+                    <string>XHCI-unsupported.kext</string>
+                    <key>Comment</key>
+                    <string>V0.9.2</string>
+                    <key>Enabled</key>
+                    <true/>
+                    <key>ExecutablePath</key>
+                    <string></string>
+                    <key>MaxKernel</key>
+                    <string></string>
+                    <key>MinKernel</key>
+                    <string></string>
+                    <key>PlistPath</key>
+                    <string>Contents/Info.plist</string>
+                </dict>
             </array>
             <key>Block</key>
             <array>
@@ -407,8 +526,6 @@
                     <string></string>
                     <key>MinKernel</key>
                     <string></string>
-                    <key>Strategy</key>
-                    <string>Disable</string>
                 </dict>
             </array>
             <key>Emulate</key>
@@ -760,8 +877,6 @@
                 <false/>
                 <key>AppleXcpmForceBoost</key>
                 <false/>
-                <key>CustomPciSerialDevice</key>
-                <false/>
                 <key>CustomSMBIOSGuid</key>
                 <false/>
                 <key>DisableIoMapper</key>
@@ -773,8 +888,6 @@
                 <key>ExtendBTFeatureFlags</key>
                 <false/>
                 <key>ExternalDiskIcons</key>
-                <false/>
-                <key>ForceAquantiaEthernet</key>
                 <false/>
                 <key>ForceSecureBootScheme</key>
                 <false/>
@@ -819,8 +932,6 @@
                 <integer>0</integer>
                 <key>HibernateMode</key>
                 <string>None</string>
-                <key>HibernateSkipsPicker</key>
-                <false/>
                 <key>HideAuxiliary</key>
                 <false/>
                 <key>LauncherOption</key>
@@ -856,8 +967,8 @@
                 <integer>0</integer>
                 <key>DisplayLevel</key>
                 <integer>2147483650</integer>
-                <key>LogModules</key>
-                <string>*</string>
+                <key>SerialInit</key>
+                <false/>
                 <key>SysReport</key>
                 <false/>
                 <key>Target</key>
@@ -886,8 +997,12 @@
             </array>
             <key>Security</key>
             <dict>
+                <key>AllowNvramReset</key>
+                <false/>
                 <key>AllowSetDefault</key>
                 <true/>
+                <key>AllowToggleSip</key>
+                <false/>
                 <key>ApECID</key>
                 <integer>0</integer>
                 <key>AuthRestart</key>
@@ -913,40 +1028,6 @@
                 <key>Vault</key>
                 <string>Optional</string>
             </dict>
-            <key>Serial</key>
-            <dict>
-                <key>Custom</key>
-                <dict>
-                    <key>BaudRate</key>
-                    <integer>115200</integer>
-                    <key>ClockRate</key>
-                    <integer>1843200</integer>
-                    <key>DetectCable</key>
-                    <false/>
-                    <key>ExtendedTxFifoSize</key>
-                    <integer>64</integer>
-                    <key>FifoControl</key>
-                    <integer>7</integer>
-                    <key>LineControl</key>
-                    <integer>3</integer>
-                    <key>PciDeviceInfo</key>
-                    <data>/w==</data>
-                    <key>RegisterAccessWidth</key>
-                    <integer>8</integer>
-                    <key>RegisterBase</key>
-                    <integer>1016</integer>
-                    <key>RegisterStride</key>
-                    <integer>1</integer>
-                    <key>UseHardwareFlowControl</key>
-                    <false/>
-                    <key>UseMmio</key>
-                    <false/>
-                </dict>
-                <key>Init</key>
-                <false/>
-                <key>Override</key>
-                <false/>
-            </dict>
             <key>Tools</key>
             <array>
                 <dict>
@@ -960,8 +1041,6 @@
                     <true/>
                     <key>Flavour</key>
                     <string>Auto</string>
-                    <key>FullNvramAccess</key>
-                    <false/>
                     <key>Name</key>
                     <string>OpenShell.efi</string>
                     <key>Path</key>
@@ -996,7 +1075,7 @@
                     <key>SystemAudioVolume</key>
                     <data>Rg==</data>
                     <key>boot-args</key>
-                    <string>-v alcid=3 watchdog=0 igfxonln=1 agdpmod=vit9696 -vi2c-force-polling -igfxblr -noDC9 igfxfw=2 igfxagdc=0 -wegnoegpu debug=0x100</string>
+                    <string>alcid=21 watchdog=0 igfxonln=1 agdpmod=vit9696 -vi2c-force-polling -igfxblr -noDC9 igfxfw=2 igfxagdc=0 -wegnoegpu debug=0x100</string>
                     <key>csr-active-config</key>
                     <data>AAAAAA==</data>
                     <key>prev-lang:kbd</key>
@@ -1021,6 +1100,8 @@
                     <string>ForceDisplayRotationInEFI</string>
                 </array>
             </dict>
+            <key>LegacyEnable</key>
+            <false/>
             <key>LegacyOverwrite</key>
             <false/>
             <key>LegacySchema</key>
@@ -1065,13 +1146,13 @@
                 <key>AdviseFeatures</key>
                 <false/>
                 <key>MLB</key>
-                <string>FVF0155004N0000JC</string>
+                <string></string>
                 <key>MaxBIOSVersion</key>
                 <false/>
                 <key>ProcessorType</key>
-                <integer>0</integer>
+                <integer>1793</integer>
                 <key>ROM</key>
-                <data>BEiaLEg5</data>
+                <data></data>
                 <key>SpoofVendor</key>
                 <true/>
                 <key>SystemMemoryStatus</key>
@@ -1079,9 +1160,9 @@
                 <key>SystemProductName</key>
                 <string>MacBookPro15,4</string>
                 <key>SystemSerialNumber</key>
-                <string>FVFCKYZ8L40Y</string>
+                <string></string>
                 <key>SystemUUID</key>
-                <string>17BB46BF-DF90-45CB-8EC5-EA32287A4D6B</string>
+                <string></string>
             </dict>
             <key>UpdateDataHub</key>
             <true/>
@@ -1123,12 +1204,6 @@
                 <integer>50</integer>
                 <key>KeySubsequentDelay</key>
                 <integer>5</integer>
-                <key>PointerDwellClickTimeout</key>
-                <integer>0</integer>
-                <key>PointerDwellDoubleClickTimeout</key>
-                <integer>0</integer>
-                <key>PointerDwellRadius</key>
-                <integer>0</integer>
                 <key>PointerPollMask</key>
                 <integer>-1</integer>
                 <key>PointerPollMax</key>
@@ -1176,8 +1251,6 @@
                     <string>HfsPlus.efi</string>
                     <key>Enabled</key>
                     <true/>
-                    <key>LoadEarly</key>
-                    <false/>
                     <key>Path</key>
                     <string>HfsPlus.efi</string>
                 </dict>
@@ -1188,8 +1261,6 @@
                     <string>OpenRuntime.efi</string>
                     <key>Enabled</key>
                     <true/>
-                    <key>LoadEarly</key>
-                    <false/>
                     <key>Path</key>
                     <string>OpenRuntime.efi</string>
                 </dict>
@@ -1311,8 +1382,6 @@
                 <true/>
                 <key>ResizeGpuBars</key>
                 <integer>-1</integer>
-                <key>ResizeUsePciRbIo</key>
-                <false/>
                 <key>TscSyncTimeout</key>
                 <integer>0</integer>
                 <key>UnblockFsConnect</key>
