--- a/EFI/OC/oldConfig.plist
+++ b/EFI/OC/oldConfig.plist
@@ -510,42 +510,6 @@
                     <key>PlistPath</key>
                     <string>Contents/Info.plist</string>
                 </dict>
-                <dict>
-                    <key>Arch</key>
-                    <string>Any</string>
-                    <key>BundlePath</key>
-                    <string>CodecCommander.kext</string>
-                    <key>Comment</key>
-                    <string>V2.7.3</string>
-                    <key>Enabled</key>
-                    <true/>
-                    <key>ExecutablePath</key>
-                    <string>Contents/MacOS/CodecCommander</string>
-                    <key>MaxKernel</key>
-                    <string></string>
-                    <key>MinKernel</key>
-                    <string></string>
-                    <key>PlistPath</key>
-                    <string>Contents/Info.plist</string>
-                </dict>
-                <dict>
-                    <key>Arch</key>
-                    <string>Any</string>
-                    <key>BundlePath</key>
-                    <string>BrightnessKeys.kext</string>
-                    <key>Comment</key>
-                    <string>V1.0.2</string>
-                    <key>Enabled</key>
-                    <true/>
-                    <key>ExecutablePath</key>
-                    <string>Contents/MacOS/BrightnessKeys</string>
-                    <key>MaxKernel</key>
-                    <string></string>
-                    <key>MinKernel</key>
-                    <string></string>
-                    <key>PlistPath</key>
-                    <string>Contents/Info.plist</string>
-                </dict>
             </array>
             <key>Block</key>
             <array>
@@ -562,8 +526,6 @@
                     <string></string>
                     <key>MinKernel</key>
                     <string></string>
-                    <key>Strategy</key>
-                    <string>Disable</string>
                 </dict>
             </array>
             <key>Emulate</key>
@@ -915,8 +877,6 @@
                 <false/>
                 <key>AppleXcpmForceBoost</key>
                 <false/>
-                <key>CustomPciSerialDevice</key>
-                <false/>
                 <key>CustomSMBIOSGuid</key>
                 <false/>
                 <key>DisableIoMapper</key>
@@ -928,8 +888,6 @@
                 <key>ExtendBTFeatureFlags</key>
                 <false/>
                 <key>ExternalDiskIcons</key>
-                <false/>
-                <key>ForceAquantiaEthernet</key>
                 <false/>
                 <key>ForceSecureBootScheme</key>
                 <false/>
@@ -974,8 +932,6 @@
                 <integer>0</integer>
                 <key>HibernateMode</key>
                 <string>None</string>
-                <key>HibernateSkipsPicker</key>
-                <false/>
                 <key>HideAuxiliary</key>
                 <false/>
                 <key>LauncherOption</key>
@@ -1011,8 +967,8 @@
                 <integer>0</integer>
                 <key>DisplayLevel</key>
                 <integer>2147483650</integer>
-                <key>LogModules</key>
-                <string></string>
+                <key>SerialInit</key>
+                <false/>
                 <key>SysReport</key>
                 <false/>
                 <key>Target</key>
@@ -1041,8 +997,12 @@
             </array>
             <key>Security</key>
             <dict>
+                <key>AllowNvramReset</key>
+                <false/>
                 <key>AllowSetDefault</key>
                 <true/>
+                <key>AllowToggleSip</key>
+                <false/>
                 <key>ApECID</key>
                 <integer>0</integer>
                 <key>AuthRestart</key>
@@ -1068,40 +1028,6 @@
                 <key>Vault</key>
                 <string>Optional</string>
             </dict>
-            <key>Serial</key>
-            <dict>
-                <key>Custom</key>
-                <dict>
-                    <key>BaudRate</key>
-                    <integer>115200</integer>
-                    <key>ClockRate</key>
-                    <integer>1843200</integer>
-                    <key>DetectCable</key>
-                    <false/>
-                    <key>ExtendedTxFifoSize</key>
-                    <integer>64</integer>
-                    <key>FifoControl</key>
-                    <integer>7</integer>
-                    <key>LineControl</key>
-                    <integer>3</integer>
-                    <key>PciDeviceInfo</key>
-                    <data>/w==</data>
-                    <key>RegisterAccessWidth</key>
-                    <integer>8</integer>
-                    <key>RegisterBase</key>
-                    <integer>1016</integer>
-                    <key>RegisterStride</key>
-                    <integer>1</integer>
-                    <key>UseHardwareFlowControl</key>
-                    <false/>
-                    <key>UseMmio</key>
-                    <false/>
-                </dict>
-                <key>Init</key>
-                <false/>
-                <key>Override</key>
-                <false/>
-            </dict>
             <key>Tools</key>
             <array>
                 <dict>
@@ -1115,8 +1041,6 @@
                     <true/>
                     <key>Flavour</key>
                     <string>Auto</string>
-                    <key>FullNvramAccess</key>
-                    <false/>
                     <key>Name</key>
                     <string>OpenShell.efi</string>
                     <key>Path</key>
@@ -1151,7 +1075,7 @@
                     <key>SystemAudioVolume</key>
                     <data>Rg==</data>
                     <key>boot-args</key>
-                    <string>alcid=22 watchdog=0 igfxonln=1 agdpmod=vit9696 -vi2c-force-polling -igfxblr -noDC9 igfxfw=2 igfxagdc=0 -wegnoegpu debug=0x100</string>
+                    <string>alcid=21 watchdog=0 igfxonln=1 agdpmod=vit9696 -vi2c-force-polling -igfxblr -noDC9 igfxfw=2 igfxagdc=0 -wegnoegpu debug=0x100</string>
                     <key>csr-active-config</key>
                     <data>AAAAAA==</data>
                     <key>prev-lang:kbd</key>
@@ -1176,6 +1100,8 @@
                     <string>ForceDisplayRotationInEFI</string>
                 </array>
             </dict>
+            <key>LegacyEnable</key>
+            <false/>
             <key>LegacyOverwrite</key>
             <false/>
             <key>LegacySchema</key>
@@ -1278,12 +1204,6 @@
                 <integer>50</integer>
                 <key>KeySubsequentDelay</key>
                 <integer>5</integer>
-                <key>PointerDwellClickTimeout</key>
-                <integer>0</integer>
-                <key>PointerDwellDoubleClickTimeout</key>
-                <integer>0</integer>
-                <key>PointerDwellRadius</key>
-                <integer>0</integer>
                 <key>PointerPollMask</key>
                 <integer>-1</integer>
                 <key>PointerPollMax</key>
@@ -1331,8 +1251,6 @@
                     <string>HfsPlus.efi</string>
                     <key>Enabled</key>
                     <true/>
-                    <key>LoadEarly</key>
-                    <false/>
                     <key>Path</key>
                     <string>HfsPlus.efi</string>
                 </dict>
@@ -1343,8 +1261,6 @@
                     <string>OpenRuntime.efi</string>
                     <key>Enabled</key>
                     <true/>
-                    <key>LoadEarly</key>
-                    <false/>
                     <key>Path</key>
                     <string>OpenRuntime.efi</string>
                 </dict>
@@ -1466,8 +1382,6 @@
                 <true/>
                 <key>ResizeGpuBars</key>
                 <integer>-1</integer>
-                <key>ResizeUsePciRbIo</key>
-                <false/>
                 <key>TscSyncTimeout</key>
                 <integer>0</integer>
                 <key>UnblockFsConnect</key>
