chore: fix some config.plist errors

--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -1456,7 +1456,7 @@
                     <key>Enabled</key>
                     <true/>
                     <key>LoadEarly</key>
-                    <true/>
+                    <false/>
                     <key>Path</key>
                     <string>OpenCanopy.efi</string>
                 </dict>
